--- a/app/styles/tailwind.css
+++ b/app/styles/tailwind.css
@@ -1,6 +1,54 @@
-/* Add Poppins from fonts.google.com */
-@import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@500&family=Montserrat:wght@100;200;300;400;500;600&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500&display=swap');
+/* CSP not allow inject link...
+@import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@500&family=Montserrat:wght@100;200;300;400;500;600&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500&display=swap'); */
+
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* Poppins Font Family */
+@font-face {
+    font-family: "Poppins-thin";
+    src: url("/assets/Poppins-Thin.ttf") format('truetype');
+}
+
+@font-face {
+    font-family: "Poppins-light";
+    src: url("/assets/Poppins-Light.ttf") format('truetype');
+}
+
+
+@font-face {
+    font-family: "Poppins";
+    src: url("/assets/Poppins-Regular.ttf") format('truetype');
+}
+
+@font-face {
+    font-family: "Poppins-medium";
+    src: url("/assets/Poppins-Medium.ttf") format('truetype');
+}
+
+@font-face {
+    font-family: "Poppins-semibold";
+    src: url("/assets/Poppins-Semibold.ttf") format('truetype');
+}
+
+@font-face {
+    font-family: "Poppins-bold";
+    src: url("/assets/Poppins-Bold.ttf") format('truetype');
+}
+
+/* Noticia Font Family */
+@font-face {
+    font-family: "Noticia";
+    src: url('/assets/NoticiaText-Regular.ttf') format('truetype');
+    font-weight: 400;
+
+}
+
+@font-face {
+    font-family: "Noticia-bold";
+    src: url('/assets/NoticiaText-Bold.ttf') format('truetype');
+    font-weight: 700;
+
+}
